src/test/resources/errortests/Parsing/InvalidToken/PackageAndImport.t
package a::bc::+::new:+ // res: P2000

import a::B::+ // res: P2000
import a::B::C // res: I2000
import a:b:c // res: P2000

class A